--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/BackupMysql.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-exec-1.3.jar=src/lib/commons-exec-1.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-exec-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
